<!--
  ~ Copyright (c) ${YEAR} 92AK
  -->

<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ntak</groupId>
    <artifactId>pearl-zip</artifactId>
    <version>0.0.0.1</version>
    <name>PearlZip Application</name>
    <packaging>pom</packaging>

    <properties>
        <log4j.version>2.14.0</log4j.version>
        <junit.version>5.5.2</junit.version>
        <dryrun.release>true</dryrun.release>
        <eventbus.version>3.2.0</eventbus.version>
        <pearlzip.next.version>${project.version}</pearlzip.next.version>
    </properties>

    <modules>
        <module>pearl-zip-lang-pack-en-GB</module>
        <module>pearl-zip-archive</module>
        <module>pearl-zip-archive-acc</module>
        <module>pearl-zip-archive-szjb</module>
        <module>pearl-zip-license</module>
        <module>pearl-zip-ui</module>
        <module>pearl-zip-assembly-osx</module>
    </modules>

    <licenses>
        <license>
            <name>BSD 3-Clause</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>

    <repositories>
        <repository>
            <id>Maven Central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Unit Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- Miscellaneous -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>en-GB</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <lang>en</lang>
                <country>GB</country>
            </properties>
        </profile>
        <profile>
            <id>fr-FR</id>
            <properties>
                <lang>fr</lang>
                <country>FR</country>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <echo>Next version: ${pearlzip.next.version}</echo>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <id>version-set</id>
                        <phase>install</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>${project.basedir}/pom.xml</include>
                            </includes>
                            <replacements>
                                <replacement>
                                    <token>${project.version}</token>
                                    <value>${pearlzip.next.version}</value>
                                </replacement>
                            </replacements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
